        
BUG FIXES

    o   Assignment to factor columns (using :=, [<- or $<-) could cause
        'variable not found' errors and a seg fault in some circumstances
        due to a new feature in v1.7.0: "Factor columns on LHS of :=, [<-
        and $<- can now be assigned new levels", fixing #1664. Thanks to
        Daniele Signori for reporting.
        
    o   An unnecessarily strict machine tolerance test failed CRAN checks
        on Mac preventing v1.7.2 availability for Mac (only).

USER VISIBLE CHANGES

    o   := now has its own help page in addition to the examples in ?data.table,
        see help(":=").
        
    o   The error message from X[Y] when X is unkeyed has been lengthened to
        including advice to call setkey first and see ?setkey. Thanks to a
        comment by ilprincipe on Stack Overflow.
        
    o   Deleting a missing column is now a warning rather than error. Thanks
        to Chris Neff for reporting, #1642.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.2   **
        **                                         **
        *********************************************

NEW FEATURES

    o   unique and duplicated methods now work on unkeyed tables (comparing
        all columns in that case) and both now respect machine tolerance for
        double precision columns, implementing FR#1626 and fixing bug #1632.
        Their help page has been updated accordingly with detailed examples.
        Thanks to questions by Iterator and comments by Allan Engelhardt on
        Stack Overflow.
        
    o   A new method as.data.table.list has been added, since passing a (pure)
        list to data.table() now creates a single list column.
    

BUG FIXES

    o   Assigning to a column variable using <- or = in j now
        works (creating a local copy within j), rather than